workaround deadlocks in type initialization

https://bugzilla.gnome.org/show_bug.cgi?id=780216